tests/fail/invalid_name3.stderr
error: expected any of `frequency`
 --> tests/fail/invalid_name3.rs:9:50
  |
9 |     let _wave = sine_wave!(rate: 2000, len: 100, invalid: 123);
  |                                                  ^^^^^^^
